# fingerprint.dataset

./: .gitignore  .pylintrc  .sacrrc  README.md  package-lock.json  package.json  postprocess.ipynb  report.ipynb  requirements.build.txt  requirements.test.txt  requirements.txt  sacr.config  setup.cfg  setup.py
.github/workflows/: pull-request.yml  python-publish.yml
legacy/: package-lock.json  requirements.build.txt  requirements.dev.txt  setup.py
samples/: process_data_set.py  report.ipynb
src/: file_hash_generator.py  file_list_gnerator.py  file_list_to_csv.py  process_data_set.py
src/com/shapeandshare/fingerprint/dataset/: __init__.py
src/com/shapeandshare/fingerprint/dataset/contracts/: missing_hashes_error.py  source_type.py
src/com/shapeandshare/fingerprint/dataset/contracts/dtos/: __init__.py  data_set.py  file_record.py  hash_metadata.py
src/contracts/dtos/: data_set.py  file_record.py  hash_metadata.py
src/shapeandshare/fingerprint/dataset/: __init__.py
src/shapeandshare/fingerprint/dataset/contracts/: __init__.py  missing_hashes_error.py  source_type.py
src/shapeandshare/fingerprint/dataset/contracts/dtos/: __init__.py  base_model.py  data_set.py  file_record.py  hash_metadata.py
src/shapeandshare/fingerprint/dataset/utils/: __init__.py  hash.py
src/utils/: file_hash_generator.py  file_list_generator.py  file_list_gnerator.py  file_list_to_csv.py  file_list_to_df.py  hash.py
test/unit/: setup.py
test/unit/shapeandshare/fingerprint/dataset/utils/: test_hash.py
(+2 files in other folders)
