[metadata]
name = shapeandshare_fingerprint_dataset
version = 0.4.2
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = Generates file hash reports
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic >=1.9.0
    tqdm >=4.63.0
    pandas >=1.4.1

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
